Add F7 new-folder and Path-based text viewer
Add F7 handler to create new directories in FilePanel (with input dialog, name validation, mount capability check, and error dialogs). Refactor TextViewPanel to operate on java.nio.file.Path (size check via Files.size, reading via Files.readString, binary detection via Files.newInputStream) so it works with NIO filesystems like ZIP; provide File overloads that delegate to the Path-based APIs. Update QuickViewPanel to use the Path-based text checks and loaders. Small import additions and logging/error messages included.